feat(server): get authorId from token in match creation
